
2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

	* README/INSTALL: Updated files to reflect next release
   
	* src/*.c: Fixed all warnings (using -Wall -Werror)

2000-02-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-spice.scm: Updated file with Bas' patch to allow the
	  use of the uref=include... mechanism, see for more info: 
	  http://www.geda.seul.org/mailinglist/geda-dev25/msg00113.html

2000-02-04  Stefan Petersen  <spe@geda.seul.org>

	* scheme/gnet-PCBboard.scm: Fixed (hopefully) guile version 
	  incompatibilities in module popen (didn't exist before 1.3.2)
	
2000-01-25  Matt Ettus   <matt@ettus.com>

	* scheme/gnet-PCBboard.scm:  Added JM's code

	* autoconf and automake stuff updated for the above.

	* src/gschem2pcb:  Added.  This will hopefully be integrated
	  directly, soon.

	* README.pcb:  Info on usage for above

2000-01-24  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_netlist.c: Fixed g_get_packages to properly return ALL packages
	  of ALL loaded schematics (basically switch to an previous attempt, 
	  and folding in any improvements the new version had)

1999-10-19  Matt Ettus   <matt@ettus.com>

	* scheme/gnet-vipec.scm: Fixed ground node handling, some code cleaning.

	* scheme/gnet-bom.scm:  Removed references to strip1.  Thanks Stefan.

	* scheme/gnetlist.scm: Removed strip1, added ground handling for
	number-nets function.

1999-10-17  Ales Hvezda  <ahvezda@geda.seul.org>
	
	* src/*.c: Changed all files to use the new libgeda/libgeda.h include

1999-10-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/*.scm: Removed all gnetlist:set-netlist-mode

	* src/g_register.c: Removed register call to gnetlist:set-netlist-mode

	* src/g_netlist.c: Removed gnetlist:set-netlist-mode

	* scheme/gnet-spice.scm: Integrated latest spice backend by Bas 
          Gieltjes

	* tests/: Created directory to hold gnetlist tests
	
	* tests/*: Populated tests directory with output from correct netlist
	  runs
