@@ -1,5 +1,5 @@
 /* structural Verilog generated by gnetlist */
-module top (
+module not found (
        INPUTA ,
        INPUTB ,
        INPUTC ,
@@ -43,8 +43,8 @@ wire OUTPUTFn ;
 wire OUTPUTEn ;
 wire OUTPUTDn ;
 wire OUTPUTCn ;
-wire OUTPUTBn ;
 wire unnamed_net30 ;
+wire OUTPUTBn ;
 wire OUTPUTAn ;
 wire unnamed_net29 ;
 wire unnamed_net28 ;
@@ -174,43 +174,43 @@ nand U27 (
     );
 
 not U26 ( 
-  /* IN */ INPUTD,
-  /* OUT */ unnamed_net8
+  /* OUT */ unnamed_net8,
+  /* IN */ INPUTD
     );
 
 not U40 ( 
-  /* IN */ unnamed_net27,
-  /* OUT */ OUTPUTGn
+  /* OUT */ OUTPUTGn,
+  /* IN */ unnamed_net27
     );
 
 not U39 ( 
-  /* IN */ unnamed_net25,
-  /* OUT */ OUTPUTFn
+  /* OUT */ OUTPUTFn,
+  /* IN */ unnamed_net25
     );
 
 not U25 ( 
-  /* IN */ unnamed_net24,
-  /* OUT */ OUTPUTEn
+  /* OUT */ OUTPUTEn,
+  /* IN */ unnamed_net24
     );
 
 not U24 ( 
-  /* IN */ unnamed_net20,
-  /* OUT */ OUTPUTDn
+  /* OUT */ OUTPUTDn,
+  /* IN */ unnamed_net20
     );
 
 not U23 ( 
-  /* IN */ unnamed_net18,
-  /* OUT */ OUTPUTCn
+  /* OUT */ OUTPUTCn,
+  /* IN */ unnamed_net18
     );
 
 not U22 ( 
-  /* IN */ unnamed_net30,
-  /* OUT */ OUTPUTBn
+  /* OUT */ OUTPUTBn,
+  /* IN */ unnamed_net30
     );
 
 not U21 ( 
-  /* IN */ unnamed_net16,
-  /* OUT */ OUTPUTAn
+  /* OUT */ OUTPUTAn,
+  /* IN */ unnamed_net16
     );
 
 nor U20 ( 
