@@ -1,5 +1,5 @@
 /* structural Verilog generated by gnetlist */
-module top (
+module not found (
        IN3 ,
        REF1 ,
        REF2 ,
