@@ -16,6 +16,9 @@ Most recent changes are at the top of this file
 
 	* src/*.c: Fixed all warnings (using -Wall -Werror)
 
+	* src/o_attrib.c: Really enforced the no spaces beside the equals
+	  sign when checking if an attribute is valid or not
+
 2000-02-17  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_text_basic.c: More work on getting postscript output to work
