@@ -5,6 +5,12 @@
    
 	* src/*.c: Fixed all warnings (using -Wall -Werror)
 
+	* tests/*.verilog *.vhdl: Updated stored output to be current
+	  (so that the tests pass)
+
+	* src/gnetlist.c: Minor type change (so that it work on PPC)
+          Thanks to njh for pointing this out.
+
 2000-02-07  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* scheme/gnet-spice.scm: Updated file with Bas' patch to allow the
